--- a/app/src/main/res/layout/bottom_collection_creation.xml
+++ b/app/src/main/res/layout/bottom_collection_creation.xml
@@ -10,7 +10,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp">
 
         <com.google.android.material.bottomsheet.BottomSheetDragHandleView
             android:id="@+id/bottomsheet_firstElement"
@@ -113,9 +114,10 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="Next"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/login_blue"
             android:textSize="20sp"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
             app:layout_constraintTop_toBottomOf="@+id/textView5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
