--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -43,6 +43,8 @@
         android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@+id/textview_login"
         app:endIconMode="clear_text"
+        app:errorTextColor="@color/white"
+        app:errorIconTint="@color/white"
         android:textColorHint="@color/white"
         app:errorEnabled="true">
 
@@ -69,6 +71,8 @@
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
         app:passwordToggleEnabled="true"
         android:textColorHint="@color/white"
+        app:errorTextColor="@color/white"
+        app:errorIconTint="@color/white"
         app:errorEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
