--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -8,62 +8,56 @@
     android:background="@drawable/mobile_gradient_backgrounds_2"
     tools:context=".ui.startup.WelcomeActivity">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/left_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="16dp" />
-
-
-
     <ImageView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="30dp"
         android:contentDescription="@string/logo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_readify_logo" />
+        app:srcCompat="@drawable/ic_readify_logo"
+        />
 
     <TextView
-        android:id="@+id/textview_login"
+        android:id="@+id/textview_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="12dp"
         android:text="@string/register"
         android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo" />
 
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_username"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="24dp"
-        android:textColorHint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/left_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textview_login"
+        android:layout_marginTop="22dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/textview_register"
         app:endIconMode="clear_text"
+        app:errorTextColor="@color/white"
+        app:errorIconTint="@color/white"
+        android:textColorHint="@color/white"
         app:errorEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/text_input_edit_text_name"
+            android:id="@+id/text_input_edit_text_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/custom_textbox"
             android:drawableStart="@drawable/ic_baseline_profile_24"
-            android:drawablePadding="20dp"
             android:drawableTint="@color/white"
-            android:hint="@string/username" />
+            android:drawablePadding="20dp"
+            android:textColor="@color/white"
+            android:hint="@string/username"
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -76,21 +70,21 @@
         android:padding="13dp"
         android:background="@drawable/custom_textbox"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/text_input_layout_username"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_username" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_email"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="24dp"
-        android:textColorHint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/spinner_gender"
+        android:layout_marginTop="22dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@+id/spinner_gender"
         app:endIconMode="clear_text"
+        app:errorTextColor="@color/white"
+        app:errorIconTint="@color/white"
+        android:textColorHint="@color/white"
         app:errorEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -101,22 +95,23 @@
             android:drawableStart="@drawable/ic_baseline_email_24"
             android:drawableTint="@color/white"
             android:drawablePadding="20dp"
+            android:textColor="@color/white"
             android:hint="@string/email"
-            android:textColorHint="@color/white"
             android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_password"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/left_guideline"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
         app:passwordToggleEnabled="true"
         android:textColorHint="@color/white"
+        app:errorTextColor="@color/white"
+        app:errorIconTint="@color/white"
         app:errorEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -127,21 +122,23 @@
             android:drawableStart="@drawable/ic_baseline_vpn_key_24"
             android:drawablePadding="20dp"
             android:drawableTint="@color/white"
+            android:textColor="@color/white"
             android:hint="@string/password"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_password_confirm"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="24dp"
-        android:textColorHint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/left_guideline"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password"
         app:passwordToggleEnabled="true"
+        android:textColorHint="@color/white"
+        app:errorTextColor="@color/white"
+        app:errorIconTint="@color/white"
         app:errorEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -152,7 +149,8 @@
             android:drawableStart="@drawable/ic_baseline_vpn_key_24"
             android:drawablePadding="20dp"
             android:drawableTint="@color/white"
-            android:hint="@string/password_confirm"
+            android:textColor="@color/white"
+            android:hint="@string/password"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
