--- a/app/src/main/res/navigation/home_navigation_graph.xml
+++ b/app/src/main/res/navigation/home_navigation_graph.xml
@@ -43,16 +43,6 @@
 
 
     <fragment
-        android:id="@+id/favoritesFragment"
-        android:name="it.unimib.readify.ui.main.FavoritesFragment"
-        android:label="fragment_favorites"
-        tools:layout="@layout/fragment_favorites" >
-        <action
-            android:id="@+id/action_favoritesFragment_to_bookDetailsFragment"
-            app:destination="@id/bookDetailsFragment" />
-    </fragment>
-
-    <fragment
         android:id="@+id/profileFragment"
         android:name="it.unimib.readify.ui.main.ProfileFragment"
         android:label="fragment_profile"
@@ -87,7 +77,27 @@
         android:id="@+id/bookDetailsFragment"
         android:name="it.unimib.readify.ui.main.BookDetailsFragment"
         android:label="fragment_book_details"
-        tools:layout="@layout/fragment_book_details" />
+        tools:layout="@layout/fragment_book_details" >
+
+        <action
+            android:id="@+id/action_bookDetailsFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true"/>
+
+        <action
+            android:id="@+id/action_bookDetailsFragment_to_searchFragment"
+            app:destination="@id/searchFragment"
+            app:popUpTo="@id/searchFragment"
+            app:popUpToInclusive="true"/>
+
+        <action
+            android:id="@+id/action_bookDetailsFragment_to_collectionFragment"
+            app:destination="@id/collectionFragment"
+            app:popUpTo="@id/collectionFragment"
+            app:popUpToInclusive="true"/>
+
+    </fragment>
 
     <fragment
         android:id="@+id/settingFragment"
