--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,10 +22,15 @@
             android:layout_height="wrap_content"
             android:background="@color/login_blue"
             android:minHeight="?attr/actionBarSize"
-            app:menu="@menu/top_app_bar"
+            app:title="@string/app_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
+            />
 
     </com.google.android.material.appbar.AppBarLayout>
 
