--- a/app/src/main/res/layout/book_home_item.xml
+++ b/app/src/main/res/layout/book_home_item.xml
@@ -19,6 +19,8 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:maxLines="2"
+        />
 
 </LinearLayout>
