--- a/app/src/main/res/menu/profile_appbar_menu.xml
+++ b/app/src/main/res/menu/profile_appbar_menu.xml
@@ -8,14 +8,14 @@
     <item
         android:id="@+id/action_notifications"
         android:icon="@drawable/ic_heart"
-        android:title="TODO notifiche"
+        android:title="@string/notifications_button"
         app:showAsAction="ifRoom"/>
 
     <!-- Settings, must always be in the overflow. -->
     <item
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_baseline_menu"
-        android:title="TODOhamburger"
+        android:title="@string/settings_button_profile"
         app:showAsAction="ifRoom"/>
 
 </menu>
