--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -11,6 +11,7 @@
 
 
     <!-- TODO: Update profile fragment -->
+    <!-- TODO: Delete text from this sectiupdaon -->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,9 +20,6 @@
         android:padding="20dp"
         android:gravity="top|start">
 
-
-
-        <!-- social VERSIONE 1-->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
