--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,9 +26,13 @@
         android:padding="20dp"
         android:gravity="top|start">
 
+        <TextView
+            android:id="@+id/textview_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            />
 
-
-        <!-- social VERSIONE 1-->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -55,9 +59,9 @@
                 android:layout_marginEnd="25dp">
 
                 <TextView
+                    android:id="@+id/textView_followers"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="19"
                     android:textSize="23sp" />
 
                 <TextView
@@ -79,32 +83,41 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
+                    android:id="@+id/textView_following"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="7"
                     android:textSize="23sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="followed"
+                    android:text="following"
                     android:textSize="20sp" />
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <!-- condivisione social VERSIONE 1-->
+        <!-- social links -->
         <TextView
+            android:id="@+id/textView_facebook"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ema_bon__"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:visibility="gone"/>
 
         <TextView
+            android:id="@+id/textView_twitter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ema01"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/textView_instagram"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:visibility="gone"/>
 
         <!-- collections -->
         <TextView
